my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:19:3: error: use of undeclared identifier 'v4u64_op0'
   19 |   v4u64_op0 = (v4u64){0x0100010001000000, 0x0100010001000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:19:16: error: use of undeclared identifier 'v4u64'
   19 |   v4u64_op0 = (v4u64){0x0100010001000000, 0x0100010001000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:21:3: error: use of undeclared identifier 'v4u64_op1'
   21 |   v4u64_op1 = (v4u64){0x0001000100010001, 0x0001000100010001,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:21:16: error: use of undeclared identifier 'v4u64'
   21 |   v4u64_op1 = (v4u64){0x0001000100010001, 0x0001000100010001,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:23:3: error: use of undeclared identifier '__m256i_result'
   23 |   __m256i_result = (__m256i){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:23:21: error: use of undeclared identifier '__m256i'
   23 |   __m256i_result = (__m256i){0x0000000000000000, 0x0000000000000000,
      |                     ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:25:3: error: use of undeclared identifier '__m256i_out'
   25 |   __m256i_out = __lasx_xvsrlrni_b_h((__m256)v4u64_op0, (__m256)v4u64_op1, 0xf);
      |   ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:25:17: error: call to undeclared function '__lasx_xvsrlrni_b_h'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   25 |   __m256i_out = __lasx_xvsrlrni_b_h((__m256)v4u64_op0, (__m256)v4u64_op1, 0xf);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:25:38: error: use of undeclared identifier '__m256'
   25 |   __m256i_out = __lasx_xvsrlrni_b_h((__m256)v4u64_op0, (__m256)v4u64_op1, 0xf);
      |                                      ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:25:57: error: use of undeclared identifier '__m256'
   25 |   __m256i_out = __lasx_xvsrlrni_b_h((__m256)v4u64_op0, (__m256)v4u64_op1, 0xf);
      |                                                         ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:26:19: error: use of undeclared identifier '__m256i_result'
   26 |   check_lasx_out(&__m256i_result, &__m256i_out, sizeof(__m256i_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:26:36: error: use of undeclared identifier '__m256i_out'
   26 |   check_lasx_out(&__m256i_result, &__m256i_out, sizeof(__m256i_out), __FILE__, __LINE__);
      |                                    ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:26:56: error: use of undeclared identifier '__m256i_out'
   26 |   check_lasx_out(&__m256i_result, &__m256i_out, sizeof(__m256i_out), __FILE__, __LINE__);
      |                                                        ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvsrlrni.c:28:3: error: use of undeclared identifier 'v4u64_op0'
   28 |   v4u64_op0 = (v4u64){0xfff0000000000000, 0xfff0000000000000,
      |   ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
